{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 28,
  "lineage": "0c72fb11-2917-a6f4-0d0c-56466e5f2c7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e173d3a372fc85e",
            "arn": "arn:aws:ec2:us-east-1:338237682576:elastic-ip/eipalloc-01e173d3a372fc85e",
            "association_id": "eipassoc-0bd97e8c9ed83e1f8",
            "domain": "vpc",
            "id": "eipalloc-01e173d3a372fc85e",
            "instance": "i-05458b60346f5d2c3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01e6dea8669822a9f",
            "private_dns": "ip-10-0-0-7.ec2.internal",
            "private_ip": "10.0.0.7",
            "public_dns": "ec2-107-21-225-208.compute-1.amazonaws.com",
            "public_ip": "107.21.225.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:338237682576:instance/i-05458b60346f5d2c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05458b60346f5d2c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "challenge",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2d9b146e259c9a9",
            "private_dns": "ip-10-0-0-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.6",
            "public_ip": "18.204.34.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-049757fd9646c3394",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aaf810f98887c84",
            "tags": {
              "Name": "ubuntu-server"
            },
            "tags_all": {
              "Name": "ubuntu-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b4cb05d255c2fa94"
            ]
          },
          "dependencies": [
            "aws_security_group.vpcnewsg",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpcnew"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwnew",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338237682576:internet-gateway/igw-02c06284de61e106a",
            "id": "igw-02c06284de61e106a",
            "owner_id": "338237682576",
            "tags": {
              "Name": "newig"
            },
            "tags_all": {
              "Name": "newig"
            },
            "vpc_id": "vpc-0108c5aa5eaf4f544"
          },
          "dependencies": [
            "aws_vpc.vpcnew"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "newinterface1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338237682576:network-interface/eni-01e6dea8669822a9f",
            "attachment": [
              {
                "attachment_id": "eni-attach-042f12352adc2bd66",
                "device_index": 1,
                "instance": "i-05458b60346f5d2c3"
              }
            ],
            "id": "eni-01e6dea8669822a9f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e9:bb:81:85:2d",
            "owner_id": "338237682576",
            "private_ip": "10.0.0.7",
            "private_ip_list": [
              "10.0.0.7"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.7"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b4cb05d255c2fa94"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aaf810f98887c84"
          },
          "dependencies": [
            "aws_instance.ec2server",
            "aws_security_group.vpcnewsg",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpcnew"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "newroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338237682576:route-table/rtb-05ef89f5fc337ddfa",
            "id": "rtb-05ef89f5fc337ddfa",
            "owner_id": "338237682576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c06284de61e106a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpcnew_routetable"
            },
            "tags_all": {
              "Name": "vpcnew_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0108c5aa5eaf4f544"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igwnew",
            "aws_vpc.vpcnew"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7edc62bd9c1902c",
            "route_table_id": "rtb-05ef89f5fc337ddfa",
            "subnet_id": "subnet-05aaf810f98887c84"
          },
          "dependencies": [
            "aws_internet_gateway.igwnew",
            "aws_route_table.newroutetable",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpcnew"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpcnewsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338237682576:security-group/sg-0b4cb05d255c2fa94",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4cb05d255c2fa94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240605090231954600000001",
            "name_prefix": "terraform-",
            "owner_id": "338237682576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web SG"
            },
            "tags_all": {
              "Name": "Web SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0108c5aa5eaf4f544"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcnew"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338237682576:subnet/subnet-05aaf810f98887c84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aaf810f98887c84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "338237682576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnetnew"
            },
            "tags_all": {
              "Name": "publicsubnetnew"
            },
            "vpc_id": "vpc-0108c5aa5eaf4f544"
          },
          "dependencies": [
            "aws_vpc.vpcnew"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvtsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338237682576:subnet/subnet-024454aea73574489",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024454aea73574489",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "338237682576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvtsubnetnew"
            },
            "tags_all": {
              "Name": "pvtsubnetnew"
            },
            "vpc_id": "vpc-0108c5aa5eaf4f544"
          },
          "dependencies": [
            "aws_vpc.vpcnew"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcnew",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338237682576:vpc/vpc-0108c5aa5eaf4f544",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b647647698714866",
            "default_route_table_id": "rtb-0f5e27c6fa1b0b1c2",
            "default_security_group_id": "sg-039e60700c3e5cf01",
            "dhcp_options_id": "dopt-05d726801ea12d2e2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0108c5aa5eaf4f544",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5e27c6fa1b0b1c2",
            "owner_id": "338237682576",
            "tags": {
              "Name": "vpcnew"
            },
            "tags_all": {
              "Name": "vpcnew"
            }
          }
        }
      ]
    }
  ]
}